<resources><string name="app_name">Nuterizi</string><string name="action_settings">Settings</string><string name="helloworld">Hello World</string><string name="username">Username</string><string name="password">Password</string><string name="belumPunyaAkun">Belum Punya Akun?</string><string name="masuk">Masuk</string><string name="daftar">Daftar</string><string name="Kebutuhan">Kebutuhan kalori harian</string><string name="Kalori">X.XXX kkal</string><string name="Kkal">kkal</string><string name="Hitung">Hitung Kebutuhan Gizi</string><string name="List">Daftar Gizi Makanan</string><string name="Reminder">Reminder</string><string name="FAQ">FAQ</string><string name="ON">ON</string><string name="OFF">OFF</string><string name="Rem1">06:00</string><string name="Rem2">12:00</string><string name="Rem3">16:00</string><string name="Rem4">20:00</string><string name="JenisKelamin">Jenis Kelamin</string><string name="Umur">Umur</string><string name="Tinggi">Tinggi Badan</string><string name="Berat">Berat Badan</string><string name="Aktivitas">Frekuensi Aktivitas Fisik</string><string name="Laki">Laki-laki</string><string name="Perempuan">Perempuan</string><string name="Tahun">tahun</string><string name="Kg">kg</string><string name="Cm">cm</string><string name="Akt">Pilih</string><string-array name="Akt_array"><item>Tidak pernah</item><item>Jarang (1-2 hari)</item><item>Kadang (3-4 hari)</item><item>Sering (5-6 hari)</item><item>Selalu/olahraga berat</item></string-array><string name="Hasil">Kebutuhan kalori Anda</string><string name="Detail">Detail</string><string name="Simpan">Simpan</string><string name="KebHar">Kebutuhan Harian</string><string name="Kal">Kalori</string><string name="Pro">Protein</string><string name="Lem">Lemak</string><string name="Kar">Karbohidrat</string><string name="Protein">XX g</string><string name="Karbohidrat">XXX g</string><string name="Lemak">XX g</string><string name="Kembali">Kembali</string><string name="DaftarMakanan">Daftar Gizi Makanan</string><string name="Cari">Cari</string><string name="NamaMakanan">Nama makanan</string><string name="Makanan1">Makanan[0]</string><string name="Makanan2">Makanan[1]</string><string name="Makanan3">Makanan[2]</string><string name="Makanan4">Makanan[3]</string><string name="Makanan5">Makanan[4]</string><string name="Makanan6">Makanan[5]</string><string name="Makanan7">Makanan[6]</string><string name="Gizi1">Gizi[0]</string><string name="Gizi2">Gizi[1]</string><string name="Gizi3">Gizi[2]</string><string name="Gizi4">Gizi[3]</string><string name="Gizi5">Gizi[4]</string><string name="Gizi6">Gizi[5]</string><string name="Gizi7">Gizi[6]</string></resources>