<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingTop="20dp" android:background="@android:color/white" android:minWidth="20px" android:minHeight="20px" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"><TextView android:id="@+id/tvKebutuhanHarian" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/KebHar" android:textSize="24dp" android:textColor="@android:color/black" android:textAlignment="center" /><TextView android:id="@+id/tvKebKalori" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Kal" android:textSize="16dp" android:textColor="@android:color/black" android:layout_marginTop="10dp" android:textAlignment="center" /><TextView android:id="@+id/tvKalori" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Kalori" android:textSize="26dp" android:textColor="@android:color/black" android:layout_marginTop="0dp" android:textAlignment="center" /><TextView android:id="@+id/tvKebKarbo" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Kar" android:textSize="16dp" android:textColor="@android:color/black" android:layout_marginTop="10dp" android:textAlignment="center" /><TextView android:id="@+id/tvKarbohidrat" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Karbohidrat" android:textSize="26dp" android:textColor="@android:color/black" android:layout_marginTop="0dp" android:textAlignment="center" /><TextView android:id="@+id/tvKebProtein" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Pro" android:textSize="16dp" android:textColor="@android:color/black" android:layout_marginTop="10dp" android:textAlignment="center" /><TextView android:id="@+id/tvProtein" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Protein" android:textSize="26dp" android:textColor="@android:color/black" android:layout_marginTop="0dp" android:textAlignment="center" /><TextView android:id="@+id/tvKebLemak" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Lem" android:textSize="16dp" android:textColor="@android:color/black" android:layout_marginTop="10dp" android:textAlignment="center" /><TextView android:id="@+id/tvLemak" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Lemak" android:textSize="26dp" android:textColor="@android:color/black" android:layout_marginTop="0dp" android:textAlignment="center" /><Button android:id="@+id/btnKembali" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="100dp" android:layout_marginEnd="100dp" android:layout_marginTop="20dp" android:text="@string/Kembali" /></LinearLayout>