<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:paddingTop="20dp" android:background="@android:color/white" android:minWidth="25px" android:minHeight="25px" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"><TextView android:id="@+id/tvReminder" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/Reminder" android:textSize="24dp" android:textColor="@android:color/black" android:textAlignment="center" /><Button android:id="@+id/btnRem1" android:layout_width="match_parent" android:layout_height="80dp" android:textSize="30dp" android:text="@string/Rem1" android:textColor="@android:color/black" android:backgroundTint="@color/abu" android:layout_marginEnd="60dp" android:layout_marginTop="50dp" /><ToggleButton android:id="@+id/tgbRem1" android:layout_width="match_parent" android:layout_height="80dp" android:layout_marginTop="50dp" android:layout_marginLeft="315dp" android:textOn="@string/ON" android:textOff="@string/OFF" android:textColor="@android:color/black" /><Button android:id="@+id/btnRem2" android:layout_width="match_parent" android:layout_height="80dp" android:textSize="30dp" android:text="@string/Rem2" android:textColor="@android:color/black" android:backgroundTint="@color/abu" android:layout_marginEnd="60dp" android:layout_marginTop="130dp" /><ToggleButton android:id="@+id/tgbRem2" android:layout_width="match_parent" android:layout_height="80dp" android:layout_marginTop="130dp" android:layout_marginLeft="315dp" android:textOn="@string/ON" android:textOff="@string/OFF" android:textColor="@android:color/black" /><Button android:id="@+id/btnRem3" android:layout_width="match_parent" android:layout_height="80dp" android:textSize="30dp" android:text="@string/Rem3" android:textColor="@android:color/black" android:backgroundTint="@color/abu" android:layout_marginEnd="60dp" android:layout_marginTop="210dp" /><ToggleButton android:id="@+id/tgbRem3" android:layout_width="match_parent" android:layout_height="80dp" android:layout_marginTop="210dp" android:layout_marginLeft="315dp" android:textOn="@string/ON" android:textOff="@string/OFF" android:textColor="@android:color/black" /><Button android:id="@+id/btnRem4" android:layout_width="match_parent" android:layout_height="80dp" android:textSize="30dp" android:text="@string/Rem4" android:textColor="@android:color/black" android:backgroundTint="@color/abu" android:layout_marginEnd="60dp" android:layout_marginTop="290dp" /><ToggleButton android:id="@+id/tgbRem4" android:layout_width="match_parent" android:layout_height="80dp" android:layout_marginTop="290dp" android:layout_marginLeft="315dp" android:textOn="@string/ON" android:textOff="@string/OFF" android:textColor="@android:color/black" /></RelativeLayout>